--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,9 @@
     "main": "server.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon server.js"
+        "start": "node server.js",
+        "dev": "nodemon server.js",
+        "heroku-postbuild": " NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
     },
     "author": "",
     "license": "ISC",
@@ -14,6 +16,8 @@
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.18.2",
-        "mongoose": "^8.2.0"
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.2.0",
+        "path": "^0.12.7"
     }
 }
