--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.2.0",
+        "nodemailer": "^6.9.11",
         "path": "^0.12.7"
     }
 }
