--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.2.0",
         "nodemailer": "^6.9.11",
-        "path": "^0.12.7"
+        "path": "^0.12.7",
+        "socket.io": "^4.7.4"
     }
 }
