--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.3",
-    "flutter": "^0.0.5",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.0"
+  "scripts": {
+    "start": "npm run backend",
+    "heroku-postbuild": "npm run frontend",
+    "backend": "cd ./backend/ && npm i && npm run start",
+    "frontend": "cd ./frontend/ && npm i && npm run dev"
   }
 }
