Run frontend and backend in development
run "npm run dev" from root dir

--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
     "start": "npm run backend",
     "heroku-postbuild": "npm run frontend",
     "backend": "cd ./backend/ && npm i && npm run start",
-    "frontend": "cd ./frontend/ && npm i && npm run dev"
+    "frontend": "cd ./frontend/ && npm i && npm run dev",
+    "dev": "concurrently \"cd ./backend/ && npm run dev\" \"npm run frontend\""
+  },
+  "dependencies": {
+    "concurrently": "^8.2.2"
   }
 }
