--- a/cohab_mobile/pubspec.yaml
+++ b/cohab_mobile/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   http: ^1.2.1
   socket_io_client: ^2.0.0
+  shared_preferences: ^2.2.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
