changed frontend script

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "start": "concurrently \"npm run backend\" \"npm run frontend\"",
     "heroku-postbuild": "npm run frontend",
     "backend": "cd ./backend/ && npm i && npm run start",
-    "frontend": "cd ./frontend/ && npm i && npm run build && npm run start",
+    "frontend": "cd ./frontend/ && npm i && npm run start",
     "dev": "concurrently \"cd ./backend/ && npm run dev\" \"npm run frontend\""
   },
   "engines": {
