--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "start": "concurrently \"npm run backend\" \"npm run frontend\"",
+    "start": "cd backend && node server.js",
+    "devStart": "concurrently \"npm run backend\" \"npm run frontend\"",
     "heroku-postbuild": "npm run frontend",
     "backend": "cd ./backend/ && npm i && npm run start",
     "frontend": "cd ./frontend/ && npm i && npm run start",
