--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
   "scripts": {
     "start": "cd backend && node server.js",
-    "heroku-postbuild": "cd frontend && npm i && npm run build",
+    "heroku-postbuild": "cd frontend && npm i && npm run build --prod --base-href frontend",
     "devStart": "concurrently \"npm run backend\" \"npm run frontend\"",
-    "backend": "cd ./backend/ && npm i && npm run start",
-    "frontend": "cd frontend && npm i",
     "dev": "concurrently \"cd ./backend/ && npm run dev\" \"npm run frontend\""
   },
   "engines": {
