--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "start": "cd backend && node server.js",
-    "heroku-postbuild": "cd frontend && npm i && npm run build --prod --base-href frontend",
+    "heroku-postbuild": "cd frontend && npm i && npm run build",
     "devStart": "concurrently \"npm run backend\" \"npm run frontend\"",
     "dev": "concurrently \"cd ./backend/ && npm run dev\" \"npm run frontend\""
   },
