--- a/cohab_mobile/android/app/src/main/AndroidManifest.xml
+++ b/cohab_mobile/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:label="cohab_mobile"
         android:name="${applicationName}"
@@ -41,4 +42,6 @@
             <data android:mimeType="text/plain"/>
         </intent>
     </queries>
+
+
 </manifest>
