--- a/cohab_mobile/pubspec.yaml
+++ b/cohab_mobile/pubspec.yaml
@@ -31,8 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.2.1
-  socket_io_client: ^2.0.0
-  shared_preferences: ^2.2.2
+  web_socket_channel: ^2.4.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
