--- a/cohab_mobile/pubspec.yaml
+++ b/cohab_mobile/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
     sdk: flutter
   http: ^1.2.1
   web_socket_channel: ^2.4.4
-
+  dart_jsonwebtoken: ^2.13.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
