--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@fullcalendar/react": "^6.1.11",
+    "@mui/material": "^5.15.14",
+    "fullcalendar": "^6.1.11",
     "lucide-react": "^0.363.0",
+    "mui": "^0.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
