--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,13 +15,15 @@
     "@emotion/styled": "^11.11.0",
     "@fullcalendar/react": "^6.1.11",
     "@mui/material": "^5.15.14",
+    "formik": "^2.4.5",
     "fullcalendar": "^6.1.11",
     "lucide-react": "^0.363.0",
     "mui": "^0.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
-    "serve": "^14.2.1"
+    "serve": "^14.2.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
