--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,17 +12,23 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/styled": "^11.11.5",
     "@fullcalendar/react": "^6.1.11",
     "@mui/material": "^5.15.14",
+    "@mui/x-date-pickers": "^7.1.0",
+    "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "fullcalendar": "^6.1.11",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.363.0",
     "mui": "^0.0.1",
     "react": "^18.2.0",
+    "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.2",
     "serve": "^14.2.1",
+    "socketio": "^1.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
