--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,6 @@
     "@emotion/styled": "^11.11.5",
     "@fullcalendar/react": "^6.1.11",
     "@mui/material": "^5.15.14",
-    "@mui/x-date-pickers": "^7.1.0",
     "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "fullcalendar": "^6.1.11",
@@ -28,7 +27,8 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.2",
     "serve": "^14.2.1",
-    "socketio": "^1.0.0",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
