Updated Package.json to be correct

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,9 +21,10 @@
     "mui": "^0.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.2",
-    "socket.io-client": "^4.7.5",
     "serve": "^14.2.1",
+    "socket.io-client": "^4.7.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
