--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,14 @@
     "@emotion/styled": "^11.11.0",
     "@fullcalendar/react": "^6.1.11",
     "@mui/material": "^5.15.14",
+    "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "fullcalendar": "^6.1.11",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.363.0",
     "mui": "^0.0.1",
     "react": "^18.2.0",
+    "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.2",
