--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,12 @@
     "@fullcalendar/react": "^6.1.11",
     "@mui/material": "^5.15.14",
     "dayjs": "^1.11.10",
+    "flowbite-react": "^0.7.8",
     "formik": "^2.4.5",
     "fullcalendar": "^6.1.11",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.363.0",
+    "mdb-react-ui-kit": "^7.2.0",
     "mui": "^0.0.1",
     "react": "^18.2.0",
     "react-datepicker": "^6.6.0",
