--- a/cohab_mobile/pubspec.yaml
+++ b/cohab_mobile/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   jwt_decoder: ^2.0.1
   lucide_icons: ^0.257.0
   flutter_neat_and_clean_calendar: ^0.3.0+12
+  socket_io_client: ^2.0.3+1
   intl: ^0.19.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
