--- a/cohab_mobile/android/app/src/main/AndroidManifest.xml
+++ b/cohab_mobile/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,10 @@
         android:label="cohab_mobile"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAgosIw6Tjpa66GFftQ0UECicos8R4o9YM"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
