--- a/cohab_mobile/pubspec.yaml
+++ b/cohab_mobile/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_neat_and_clean_calendar: ^0.3.0+12
   socket_io_client: ^2.0.3+1
   intl: ^0.19.0
+  google_maps_flutter: ^2.6.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
