--- a/cohab_mobile/android/app/src/main/AndroidManifest.xml
+++ b/cohab_mobile/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <application
         android:label="cohab_mobile"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/launcher_icon">
 
         <meta-data android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyAgosIw6Tjpa66GFftQ0UECicos8R4o9YM"/>
