--- a/package.json
+++ b/package.json
@@ -9,21 +9,23 @@
     "node": "20.x"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "concurrently": "^8.2.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
+    "mongoose": "^8.2.0",
+    "nodemailer": "^6.9.11",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.22.2",
-      "bcrypt": "^5.1.1",
-      "body-parser": "^1.20.2",
-      "cors": "^2.8.5",
-      "dotenv": "^16.4.5",
-      "express": "^4.18.2",
-      "jsonwebtoken": "^9.0.2",
-      "mongoose": "^8.2.0",
-      "nodemailer": "^6.9.11",
-      "path": "^0.12.7",
-      "socket.io": "^4.7.4"
+    "socket.io": "^4.7.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
