--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,12 @@
     "flowbite-react": "^0.7.8",
     "formik": "^2.4.5",
     "fullcalendar": "^6.1.11",
+    "install": "^0.13.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.363.0",
     "mdb-react-ui-kit": "^7.2.0",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "mui": "^0.0.1",
     "react": "^18.2.0",
     "react-datepicker": "^6.6.0",
