--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "moment-timezone": "^0.5.45",
     "mui": "^0.0.1",
     "react": "^18.2.0",
+    "react-confirm-alert": "^3.0.6",
     "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
