--- a/cohab_mobile/pubspec.yaml
+++ b/cohab_mobile/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   geolocator: ^11.0.0
+  weather: ^3.1.1
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
